syntax = "proto3";

option java_package = "com.tradeshift.blayze";
option java_outer_classname = "Protos";

message Model {
    map<string, uint32> priorCounts = 1;
    map<string, Categorical> categoricalFeatures = 2;
    map<string, Text> textFeatures = 3;
    map<string, Gaussian> gaussianFeatures = 4;
    int32 pseudoCount = 6;
    uint32 modelVersion = 5;
}

message Gaussian {
    double mu0 = 2;
    int32 nu = 3;
    double beta = 4;
    int32 alpha = 5;
    map<string, StreamingEstimator> estimators = 1;
}

message StreamingEstimator {
    uint32 count = 1;
    double mean = 2;
    double m2 = 3;
}

message Categorical {
    Multinomial delegate = 1;
}

message Text {
    Multinomial delegate = 1;
}

message Multinomial {
    double includeFeatureProbability = 2;
    double pseudoCount = 3;
    map<string, uint32> outcomes = 4;
    map<string, SparseIntVector> features = 5;
}

message SparseIntVector {
    bytes indices = 3;
    bytes values = 4;
}

message Inputs {
    map<string, string> categorical = 1;
    map<string, string> text = 2;
    map<string, double> gaussian = 3;
}

message Update {
    Inputs inputs = 1;
    string outcome = 2;
}
